Parse response Gemin